[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TSM"
version = "0.0.1"
authors = [
  { name="Alexander J Valarus", email="alexander.valarus@gmail.com" },
]
description = "Contains functionality to enable rapid development of TSMixer-inspired models in Pytorch."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/A-J-V/TSM"
"Bug Tracker" = "https://github.com/A-J-V/TSM/issues"
